; ModuleID = '/home/carl/AnghaBench/nanomsg/src/transports/utils/extr_streamhdr.c_nn_streamhdr_term.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/transports/utils/extr_streamhdr.c_nn_streamhdr_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_streamhdr = type { i32, i32, i32 }

@NN_STREAMHDR_STATE_IDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_streamhdr_term(%struct.nn_streamhdr* %0) #0 {
  %2 = alloca %struct.nn_streamhdr*, align 8
  store %struct.nn_streamhdr* %0, %struct.nn_streamhdr** %2, align 8
  %3 = load %struct.nn_streamhdr*, %struct.nn_streamhdr** %2, align 8
  %4 = load i32, i32* @NN_STREAMHDR_STATE_IDLE, align 4
  %5 = call i32 @nn_assert_state(%struct.nn_streamhdr* %3, i32 %4)
  %6 = load %struct.nn_streamhdr*, %struct.nn_streamhdr** %2, align 8
  %7 = getelementptr inbounds %struct.nn_streamhdr, %struct.nn_streamhdr* %6, i32 0, i32 2
  %8 = call i32 @nn_fsm_event_term(i32* %7)
  %9 = load %struct.nn_streamhdr*, %struct.nn_streamhdr** %2, align 8
  %10 = getelementptr inbounds %struct.nn_streamhdr, %struct.nn_streamhdr* %9, i32 0, i32 1
  %11 = call i32 @nn_timer_term(i32* %10)
  %12 = load %struct.nn_streamhdr*, %struct.nn_streamhdr** %2, align 8
  %13 = getelementptr inbounds %struct.nn_streamhdr, %struct.nn_streamhdr* %12, i32 0, i32 0
  %14 = call i32 @nn_fsm_term(i32* %13)
  ret void
}

declare dso_local i32 @nn_assert_state(%struct.nn_streamhdr*, i32) #1

declare dso_local i32 @nn_fsm_event_term(i32*) #1

declare dso_local i32 @nn_timer_term(i32*) #1

declare dso_local i32 @nn_fsm_term(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
